Wed Aug 12 21:07:46 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb: if ipv6 is enabled, the version of Windows
	  must be XP or later.
	  [ruby-core:24601]

Wed Aug 12 15:59:29 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk (yes-test-knownbug): use RUNRUBY instead of MINIRUBY.

Wed Aug 12 15:52:04 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* class.c (rb_define_module_id_under): fix the name.

	* class.c (rb_define_module_under): fix for prevvious changes.

Wed Aug 12 15:32:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_define_class_id_under, rb_define_module_id_under):
	  new functions to define a nested class/module with non-ascii
	  name.

	* struct.c (make_struct): use name with encoding.

	* struct.c (inspect_struct): ditto.  [ruby-core:24849]

Wed Aug 12 Wed Aug 12 14:54:34 2009  Koichi Sasada  <ko1@atdot.net>

	* insns.def, vm.c, vm_insnhelper.c, vm_insnhelper.h: check
	  definition of (classes)#=== for case/when optimization.
	  Fix Bug #1376 [ruby-core:23190].

	* string.c (Init_String), bignum.c (Init_Bignum),
	  numeric.c (Init_Numeric): define String#===, Symbol#===,
	  Bignum#===, Fixnum#===, Float#=== as same as (classes)#==.

Wed Aug 12 14:14:42 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (readdir_internal): free old temporary filename.
	  [ruby-core:24820]

Wed Aug 12 12:59:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_new_frozen): must not change encoding of frozen
	  shared string.  [ruby-dev:39068]

Wed Aug 12 11:51:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_broken_crypt): needs more checks.

Wed Aug 12 07:41:31 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_enc_compatible): If a string is empty and
	  other's encoding is US-ASCII, returns the empty string's encoding.
	  [ruby-list:46274]

Wed Aug 12 07:38:12 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (is_data_encoding): fix condition.
