@@ -1,3 +1,9 @@
+Thu Aug 13 15:37:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* regenc.c (onigenc_strlen_null, onigenc_str_bytelen_null): fixed
+	  infinite loop for wide encodings.  reported by Ralf Junker a
+	  [ruby-core:24892].  [ruby-core:24904]
+
 Wed Aug 12 21:07:46 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/socket/extconf.rb: if ipv6 is enabled, the version of Windows
